[package]
name = "ketera-bot"
version = "0.1.0"
authors = ["kiwiyou <kiwiyou.dev@gmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.10", default-features = false, features = ["serde"] }
chrono-humanize = "0.0.11"
lazy_static = "1.4.0"
log = "0.4.8"
log4rs = "0.10.0"
regex = "1.3.4"
reqwest = { version = "0.10.3", default-features = false, features = ["default-tls", "json"] }
scraper = "0.11.0"
selectors = "0.21.0"
serde = { version = "1.0.104", default-features = false, features = ["derive"] }
teloxide = "0.2.0"
tokio = { version = "0.2.13", default-features = false, features = ["rt-threaded", "sync", "macros"] }
